config/envoy.yaml
node:
  cluster: alsdemo
  id: alsdemo

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
  - name: apim
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          access_log_options:
            flush_access_log_on_new_request: true
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          - name: envoy.access_loggers.http_grpc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
              common_config:
                log_name: "alslog"
                transport_api_version: V3
                grpc_service: 
                  envoy_grpc:
                    cluster_name: als
          route_config:
            name: test_route
            virtual_hosts:
            - name: www
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: target
                  auto_host_rewrite: true
                metadata:
                  filter_metadata:
                    envoy.filters.http.lua:
                      audit:
                        tenant: sampleTenant
                        projectId: sampleProjectId
                        projectName: sampleProjectName
                        projectTag: sampleProjectTag
                      
          http_filters:
          - name: audit_metadata 
            typed_config: 
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua 
              default_source_code: 
                inline_string: 
                  function envoy_on_request(request_handle)
                      local audit = request_handle:metadata():get("audit")
                      request_handle:streamInfo():dynamicMetadata():set("axway.apim", "audit", audit)
                  end 
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - connect_timeout: 10s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: target
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webhook.site
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: webhook.site
    http2_protocol_options: {}
    name: target
  - name: als
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: { }
    load_assignment:
      cluster_name: als
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: localhost
                    port_value: 10001
